--- a/game/findmysterybox/templates/home.html
+++ b/game/findmysterybox/templates/home.html
@@ -1,4 +1,89 @@
 {% extends "base.html" %} {% block title %} Home Page {% endblock %}
 {% block content %}
+
+<button id="Button1" name="Button1" type="button" class="btn btn-primary mx-auto" data-toggle="modal" data-target="#exampleModal2">Show riddle</button>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+        <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Mystery Box</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <div class="modal-body">
+            A mystery box was hidden in a relevant place in a random US state. You need to solve the riddle that will be shown next to find out the state.
+        </div>
+        <div class="modal-footer">
+            <button id="modalButton" name="modalButton" type="button" class="btn btn-primary mx-auto" data-toggle="modal" data-target="#exampleModal">Next</button>
+        </div>
+        </div>
+    </div>
+</div>
+
+<!-- Modal2 -->
+<div class="modal fade" id="exampleModal2" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="exampleModalLabel2" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+        <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel2">Mystery Box</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <div id="modalText2" name="modalText2" class="modal-body">
+            Wait for the riddle...
+        </div>
+        <div class="modal-footer">
+            <button id="modalButton2" name="modalButton2" type="button" class="btn btn-primary mx-auto" data-toggle="modal" data-target="#exampleModal2">Guess the state</button>
+        </div>
+        </div>
+    </div>
+</div>
+
+<!-- Modal3 -->
+<div class="modal fade" id="exampleModal3" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="exampleModalLabel3" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+        <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel3">Correct! 🥳🥳</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <div class="modal-body">
+            The riddle was about <a id="location" name="location"></a> that is located in <a id="state" name="state"></a>.
+        </div>
+        <div class="modal-footer">
+            <button id="modalButton3" name="modalButton3" type="button" class="btn btn-primary mx-auto" data-toggle="modal" data-target="#exampleModal3">Open the mystery box</button>
+        </div>
+        </div>
+    </div>
+</div>
+
+<!-- Modal4 -->
+<div class="modal fade" id="exampleModal4" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="exampleModalLabel4" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+        <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel4">Correct! 🥳🥳</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <div class="modal-body">
+            You open the mystery box and find... a fortune cookie!! with a really wise message: <br> <br> <em><strong><p id="modalText4" name="modalText4"></p></strong></em> I hope you enjoyed the cookie and the wise message!
+        </div>
+        <div class="modal-footer">
+            <button id="modalButton2" name="modalButton2" type="button" class="btn btn-primary mx-auto" data-toggle="modal" data-target="#exampleModal4">Play again</button>
+        </div>
+        </div>
+    </div>
+</div>
+
+
+
 <p> this is the website </p>
 {% endblock %}
