Add: Integrate Google Maps API
-Integrate Google Maps API
-Now is showing the map of US in the website

--- a/game/findmysterybox/templates/home.html
+++ b/game/findmysterybox/templates/home.html
@@ -86,4 +86,17 @@
 
 
 <p> this is the website </p>
+
+
+<div class="linkholder">
+    <div class="mapholder">
+        <div id="map"></div>
+        <script async
+            src="https://maps.googleapis.com/maps/api/js?key={{key}}&callback=initMap&v=weekly&region=US"
+      ></script>
+    </div>
+</div>
+
+
+
 {% endblock %}
