--- a/game/findmysterybox/templates/base.html
+++ b/game/findmysterybox/templates/base.html
@@ -8,9 +8,24 @@
         Django App
       {% endblock %}
     </title>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+    <script>
+            
+      let map;
+      function initMap(){
+        map = new google.maps.Map(document.getElementById("map"),{
+          center: { lat: 37.09024, lng: -95.712891 },
+          zoom: 5,
+        })
+      }
+
+    window.initMap = initMap
+
+    </script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!--<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"  rel="stylesheet" /> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="static/main.css"></link>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
