--- a/game/findmysterybox/templates/base.html
+++ b/game/findmysterybox/templates/base.html
@@ -12,11 +12,79 @@
     <script>
             
       let map;
+      let marker;
       function initMap(){
         map = new google.maps.Map(document.getElementById("map"),{
           center: { lat: 37.09024, lng: -95.712891 },
           zoom: 5,
         })
+        geocoder = new google.maps.Geocoder();
+
+        marker = new google.maps.Marker({
+          map,
+        });
+        map.addListener("click", (e) => {
+          //console.log(e.latLng)
+          geocode({ location: e.latLng });
+        });
+
+        map.addListener("click", (mapsMouseEvent) => {
+          var json = mapsMouseEvent.latLng.toJSON()
+          var text = json.lat + ', ' + json.lng;
+
+
+          geocodeLatLng(geocoder, map, text);
+
+          console.log(text)
+
+        });
+        
+        function geocode(request) {
+          geocoder
+            .geocode(request)
+            .then((result) => {
+              const { results } = result;
+        
+              marker.setPosition(results[0].geometry.location);
+              marker.setMap(map);
+
+
+              console.log(results)
+              return results;
+            })
+            .catch((e) => {
+              alert("Geocode was not successful for the following reason: " + e);
+            });
+        }
+      }
+
+      function geocodeLatLng(geocoder, map, text) {
+        const input = text;
+        const latlngStr = input.split(",", 2);
+        const latlng = {
+          lat: parseFloat(latlngStr[0]),
+          lng: parseFloat(latlngStr[1]),
+        };
+      
+        geocoder
+          .geocode({ location: latlng })
+          .then((response) => {
+            if (response.results[0]) {
+              //map.setZoom(11);
+              /*
+              const marker = new google.maps.Marker({
+                position: latlng,
+                map: map,
+              });
+              */
+              console.log(response.results[0].formatted_address)
+              //infowindow.setContent(response.results[0].formatted_address);
+              //infowindow.open(map, marker);
+            } else {
+              window.alert("No results found");
+            }
+          })
+          .catch((e) => window.alert("Geocoder failed due to: " + e));
       }
 
     window.initMap = initMap
@@ -28,24 +96,8 @@
     <link rel="stylesheet" href="static/main.css"></link>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">My Django App</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-    <div class="container">{% block content %} {% endblock %}</div>
+
+    <div class="primary-bg w-100 ml-0 px-0">{% block content %} {% endblock %}</div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
