--- a/findmysterybox/templates/home.html
+++ b/findmysterybox/templates/home.html
@@ -12,9 +12,6 @@
         <div class="modal-content">
         <div class="modal-header">
             <h5 class="modal-title" id="exampleModalLabel">Mystery Box</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-            </button>
         </div>
         <div class="modal-body">
             A mystery box was hidden in a relevant place in a random US state. You need to solve the riddle that will be shown next to find out the state.
@@ -32,12 +29,9 @@
         <div class="modal-content">
         <div class="modal-header">
             <h5 class="modal-title" id="exampleModalLabel2">Mystery Box</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-            </button>
         </div>
         <div class="modal-body">
-            <a id="modalText2" name="modalText2">Wait for the riddle...</a>
+            <em><a id="modalText2" name="modalText2">Wait for the riddle...</a></em><br><strong id="modalText2final" name="modalText2final"></strong>
         </div>
         <div class="modal-footer">
             <button id="modalButton2" name="modalButton2" type="button" class="btn btn-primary mx-auto" data-toggle="modal" data-target="#exampleModal2">Guess the state</button>
@@ -52,9 +46,6 @@
         <div class="modal-content">
         <div class="modal-header">
             <h5 class="modal-title" id="exampleModalLabel3">Correct! 🥳🥳</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-            </button>
         </div>
         <div class="modal-body">
             The riddle was about <a id="location" name="location"></a> that is located in <a id="state" name="state"></a>.
@@ -72,9 +63,6 @@
         <div class="modal-content">
         <div class="modal-header">
             <h5 class="modal-title" id="exampleModalLabel4">Correct! 🥳🥳</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-            </button>
         </div>
         <div class="modal-body">
             You open the mystery box and find... a fortune cookie!! with a really wise message: <br> <br> <em><strong><p id="modalText4" name="modalText4">Wait for the message...</p></strong></em> I hope you enjoyed the cookie and the wise message!
