hotfix google maps

--- a/findmysterybox/templates/home.html
+++ b/findmysterybox/templates/home.html
@@ -31,7 +31,7 @@
             <h5 class="modal-title" id="exampleModalLabel2">Mystery Box</h5>
         </div>
         <div class="modal-body">
-            <em><a id="modalText2" name="modalText2">Wait for the riddle...</a></em><br><strong id="modalText2final" name="modalText2final"></strong>
+            <em><a id="modalText2" name="modalText2">Wait for the riddle...</a><br><br><strong id="modalText2final" name="modalText2final"></strong></em>
         </div>
         <div class="modal-footer">
             <button id="modalButton2" name="modalButton2" type="button" class="btn btn-primary mx-auto" data-toggle="modal" data-target="#exampleModal2">Guess the state</button>
@@ -79,9 +79,6 @@
 <div class="linkholder" style="height: 100%;">
     <div class="mapholder" style="height: 100%;">
         <div id="map" style="height: 100%;"></div>
-        <script async
-            src="https://maps.googleapis.com/maps/api/js?key={{key}}&callback=initMap&v=weekly&region=US"
-      ></script>
     </div>
 </div>
 
