--- a/findmysterybox/templates/home.html
+++ b/findmysterybox/templates/home.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %} {% block title %} Home Page {% endblock %}
+{% extends "base.html" %} {% block title %} 🧩Find Mystery Box {% endblock %}
 {% block content %}
 
 <div class="row justify-content-center">
