Fix: Validation outside US

--- a/findmysterybox/templates/home.html
+++ b/findmysterybox/templates/home.html
@@ -14,7 +14,7 @@
             <h5 class="modal-title" id="exampleModalLabel">Mystery Box</h5>
         </div>
         <div class="modal-body">
-            A mystery box was hidden in a relevant place in a random US state. You need to solve the riddle that will be shown next to find out the state.
+            A mystery box is hidden in a relevant place in a random US state. You need to solve the riddle that will be shown next to find out the state.
         </div>
         <div class="modal-footer">
             <button id="modalButton" name="modalButton" type="button" class="btn btn-primary mx-auto" data-toggle="modal" data-target="#exampleModal">Next</button>
